# insurellm-rag

./: .gitignore  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: data_loader.py  embeddings.py  eval.py  hybrid.py  similarity_search.py
app/config/: settings.py
app/database/: vector_store.py
app/services/: llm_factory.py  synthesizer.py
ui/: package-lock.json  package.json
ui/app/: page.tsx
