[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.3",
    "pgvector==0.3.6",
    "rank-bm25>=0.2.2",
    "redis>=7.3.0",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "instructor>=1.0.0",
    "timescale-vector>=0.0.4",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "chromadb>=1.5.9",
    "qdrant-client>=1.18.0",
    "streamlit>=1.57.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "docling>=2.94.0",
]
